# nkt-easeme-api

./: .env.example  .gitignore  README.md  RENDER_DATABASE_TROUBLESHOOTING.md  alembic.ini  export_database.bat  pyproject.toml  pytest.ini  requirements-db-export.txt  requirements.txt  test_db_fixes.py  test_schema.py
alembic/: env.py
alembic/versions/: a4f4effdb3d8_initial_db_setup.py
app/: main.py
app/api/: deps.py
app/api/routes/: ai.py  checkins.py  dashboard.py  health.py  interventions.py  tasks.py
app/core/: config.py  logging.py  security.py
app/db/: init_db.py  models.py  session.py
app/repositories/: checkin_repo.py  intervention_repo.py  task_repo.py
app/schemas/: checkin.py  common.py  dashboard.py  intervention.py  task.py
app/services/: ai.py  checkin.py  clock.py
app/utils/: time.py
scripts/: export_db_schema.py  extract_schema_python.py  sqlalchemy_exporter.py
tests/: conftest.py  test_checkin_routes.py  test_core_config.py  test_core_security.py  test_db_models.py  test_db_session.py  test_db_session_comprehensive.py  test_health_routes.py  test_intervention_routes.py  test_main.py  test_repositories_checkin.py  test_repositories_checkin_mock.py  test_repositories_intervention.py  test_repositories_intervention_mock.py  test_repositories_task.py  test_repositories_task_mock.py  test_routes.py  test_schemas_intervention.py  test_services_ai.py  test_services_checkin.py  test_services_clock.py  test_task_routes.py  test_utils_time.py
