[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nkt-easeme-api"
version = "0.1.0"
description = "EaseMe FastAPI backend (Supabase + OpenAI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "gunicorn>=21.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "pyjwt[crypto]>=2.9",
  "python-jose[cryptography]>=3.3",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "orjson>=3.10",
  "tenacity>=9.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "faker>=30.8",
]

[tool.setuptools]
packages = ["app"]

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8000
